<resources>
    <string name="app_name">TraSua1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SĐT : 094 420 30 11 </string>
    <string name="nav_header_subtitle">Free ship từ 3 ly trong phạm vi 3Km</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trangchu">Trang Chủ</string>
    <string name="menu_theloai">Thể Loại</string>
    <string name="menu_voucher">Voucher</string>
    <string name="menu_hoso">Hồ Sơ</string>
    <string name="menu_thanhtoan">Thanh Toán</string>
    <string name="menu_giohang">Giỏ Hàng</string>
    <string name="menu_dangxuat">Đăng Xuất</string>
    <string name="menu_dangnhap">Đăng Nhập</string>
    <string name="menu_dangki">Đăng Kí</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>